--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2,200 +2,21 @@
  * author:陈焦滨;
  */
 body{
-	font-family: 'Microsoft YaHei'
+	font-family: 'Microsoft YaHei',sans-serif;
 }
-.navbar-default{
-	background: #fff;
-	border: none;
-	-webkit-box-shadow:  0 2px 8px 0 rgba(50,50,50,0.25);;
-	box-shadow:  0 2px 8px 0 rgba(50,50,50,0.25);;
+/*进度条*/
+.progress{
+	margin-bottom: 15px;
 }
-.navbar-default .navbar-brand{
-	height: 70px;
-	line-height: 35px;
-	font-size: 26px;
-	font-weight: bold;
-	color:#40D2B1;
+/*留言版*/
+.user-icon{
+	width: 64px;
+    height: 64px;
+    border-radius: 50%;
 }
-.navbar-default .navbar-nav>li>a{
-	font-size: 16px;
-	font-weight: bold;
-	color: #666;
-	height: 70px;
-	line-height: 35px;
-}
-.navbar-toggle{
-	margin-top: 17px;
-}
-.navbar-default .navbar-toggle:hover{
-	background: #40D2B1;
-}
-.navbar-default .navbar-toggle .icon-bar{
-	background: #1c9982;
-}
-/*home区域*/
-#home{
-	width: 100%;
-	margin-top: 70px;
-	background: url(../img/home-bg.jpg);
-	background-size: cover;
-	color: #fff;
-	text-align: center;
-}
-.lvjing{
-	width: 100%;
-	height: 100%;
-	background: rgba(0,0,0,0.7);
-	padding: 90px 0;
-}
-#home h1{
-	font-weight: bold;
+.mar-t15{
 	margin-top: 0;
-	margin-bottom: 25px;
-}
-#home p{
-	font-weight: 400;
-	line-height: 35px;
-}
-#home img{
-	display: inline-block;
-	margin-top: 30px;
-}
-/*bbs*/
-#bbs{
-	padding:80px 0;
-	text-align: center;
-}
-#bbs a{
-	color:#212121;
-	text-decoration: none;
-}
-#bbs .col-md-4{
-	padding: 15px;
-}
-#bbs .col-md-4:hover{
-	background: #f1f1f1;
-	bos-shadow:1px 1px 4px #ccc;
-}
-#bbs img{
-	margin:0 auto;
-}
-#bbs h3{
-	font-weight: bold;
-}
-/*html5+bootstrap*/
-#html5{
-	background: #f8f8f8;
-}
-#html5,#bootstrap{
-	padding: 80px 0;
-}
-#html5 h2,
-#bootstrap h2{
-	font-weight: bold;
-}
-#html5 p,
-#bootstrap p{
-	line-height: 25px;
-}
-.small-icon{
-	width: 40px;
-	height: 40px;
-	background: rgb(64,210,177);
-	color:#fff;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 40px;
-	margin-right: 20px;
-}
-/*cource*/
-#cources{
-	background: #f8f8f8;
-	padding: 80px 0;
-	text-align: center;
-}
-#cources h2{
-	font-weight: bold;
-	padding-bottom: 60px;
-}
-.cource{
-	background:#fff;
-}
-#cources .btn{
-	background: transparent;
-    border: 1px solid #40D2B1;
-    border-radius: 0px;
-    color: #40D2B1;
-    margin-top: 20px;
-    margin-bottom: 30px;
-    padding: 8px 40px;
-    transition: all 0.3s;
-}
-#cources .btn:hover{
-	background: #40D2B1;
-    color: #fff;
-}
-#cources .col-md-3{
 	margin-bottom: 20px;
-}
-#cources img{
-	width: 100%;
-    display: inline-block;
-}
-/*app*/
-#app{
-	padding: 80px 0;
-}
-#app h2{
-	font-weight: bold;
-	margin-bottom: 30px;
-}
-#app .btn{
-	margin: 10px 0;
-    background: rgb(64, 210, 177);
-    border-color: rgb(64, 210, 177);
-    border-radius: 0;
-    padding: 6px 30px;
-    transition: all 0.3s;
-}
-#app .btn:hover{
- 	background: rgb(44, 142, 120);
-}
-#app .download{
-	margin-right: 5px;
-}
-/*contact*/
-#contact{
-	background: url(../img/contact-bg.png) no-repeat;
-	background-size: cover;
-	color: #fff;
-}
-#contact h2{
-	font-weight: bold;
-	margin-top: 0;
-	margin-bottom: 25px;
-}
-#contact p{
-	line-height: 25px;
-	margin-bottom: 20px;
-}
-#contact .contact-icon{
-	margin-right: 10px;
-}
-#contact .form-control{
-	border: none;
-    border-radius: 0;
-    height: 50px;
-    margin-bottom: 20px;
-}
-#contact input[type='submit']{
-	background: #40D2B1;
-    color: #fff;
-    font-weight: bold;
-    transition: all 0.3s;
-}
-#contact input[type='submit']:hover{
-	background: rgb(44, 142, 120);
 }
 /*底部*/
 #footer{
